# app/model/model.go
@@ -17,3 +17,13 @@ type Project struct {
 	UpdatedAt *gtime.Time `orm:"updated_at" json:"updatedAt"` //
 	DeletedAt *gtime.Time `orm:"deleted_at" json:"deletedAt"` //
 }
+
+// BuildLogs is the golang structure for table build_logs.
+type BuildLogs struct {
+	Id        int    `orm:"id"         json:"id"`        //
+	Status    string `orm:"status"     json:"status"`    //
+	CreatedAt string `orm:"created_at" json:"createdAt"` //
+	UpdatedAt string `orm:"updated_at" json:"updatedAt"` //
+	DeletedAt string `orm:"deleted_at" json:"deletedAt"` //
+	ProjectId string `orm:"project_id" json:"projectId"` //
+}
